k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  labels:
    app: mssql-db
spec:
  ports:
  - port: 1433
    targetPort: 1433
  selector:
    app: mssql-db
---
apiVersion: v1
kind: Service
metadata:
  name: fastshop-service
  labels:
    app: fastshop-app
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: fastshop-app
