k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastshop-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: exam.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastshop-service
            port:
              number: 8000
